syntax = "proto3";

package spdmm.out_req_cancel;

service SPDMMOutReqCancelService {
  rpc SPDMMOutReqCancel (MetadataRequest) returns (MetadataResponse);
}

message Result { 
  int32 IsConfirm = 1;
  int32 IsStop = 2;
  int32 Qty = 3;
  string ProgStatusName = 4;
  int32 OutReqSeq = 5;
    string ProgStatus = 6;

}

message MetadataRequest {
  Result result = 1;  
  map<string, string> metadata = 2;
}

message MetadataResponse {
  bool status = 1;  
  string message = 2;      
  string data = 3; 
}


